[metadata]
name = bua_grasshopper
version = 0.1.0
description = Your package description
author = Your Name
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = 3.10

install_requires =
    bua @ url/to/bua.tar.gz

[options.entry_points]
console_scripts =
    download-datasets = your_package.download_datasets:main